--- a/style.scss
+++ b/style.scss
@@ -10,14 +10,18 @@
 
 /* basic elements */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
+@import url("https://use.typekit.net/eyr4fwr.css");
 // VARIABLE
+$green: #9EB2A4;
 $black: #000000;
 $white: #ffffff;
+$heading: "Bebas Neue", sans-serif;
+$bodytext: "panno-text", sans-serif;
 // * {
 // 	padding: 0;
 // 	margin: 0;
 //  }
+
 
 html {
 	margin: 0;
@@ -94,8 +98,99 @@ body {
 	
 		}
 		.preamble{
+			position: relative;
+			display: flex;
+			flex-direction: column;
 			width: 100%;
 			margin-top: 20rem;
+			background-color: #FFFFFF ;
+			overflow-y: hidden;
+			padding-bottom: 3vw;;
+			h3 {
+				width: 50%;
+				font-family: $heading;
+				font-weight: 400;
+				font-size: 12.5rem;
+				line-height: 11.375rem;
+				padding-top: 5.677vw;
+				padding-bottom: 0;
+				margin: 0;
+				margin-left: 7.76vw;
+				z-index: 3;
+			}
+			p{
+				font-family: $bodytext;
+				font-weight: 400;
+				font-size: 1.5rem;
+				line-height: 1.875rem;
+				width: 32.344vw;
+				margin-left: 7.76vw;
+			}
+			p:last-child::after{
+				box-sizing: border-box;
+				position: absolute;
+				top: -3vw;
+				z-index: 0;
+				right: 0;
+				content: "";
+				background: url("/images/mountains.jpg");
+				background-size: cover;
+				background-repeat: no-repeat;
+				width:49.479vw;
+				// min-height: 59.531vw;
+				height: 100%;
+			}
+		}
+	}
+	#zen-supporting {
+		position: relative;
+		background-color: $green;
+		color: $white;
+		h3 {
+			font-family: $heading;
+			font-weight: 400;
+			margin: 0;
+		}
+		p {
+			font-family: $bodytext;
+			font-size: 1.5rem;
+		}
+		.explanation{
+			width: 50%;
+			h3,p{
+				margin-left: 9.115vw;
+			}
+			h3{
+				padding-top: 3.417vw;
+				font-size: 5.625rem;
+			}
+			p{
+				width: 32.344vw;
+				font-size: 1.5rem;
+			}
+		}
+		.participation{
+			width: 50%;
+			position: absolute;
+			top:  3.417vw;
+			left: 60%;
+			h3 {
+				position: absolute;
+				top: 10vw;
+				left: -40%;
+				color: #000000;
+				font-size: 6.25rem;
+				transform: rotate(-0.25turn);
+			}
+			p {
+				width: 35.344vw;
+				position: relative;
+				left: -5%;
+				a{
+					color: $white;
+				}
+			}
+
 		}
 	}
 .viewall{
